Added Syscalls for replace virtualalloc and writeprocessmemory

--- a/PH/PH.vcxproj
+++ b/PH/PH.vcxproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -127,8 +128,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="structs.h" />
+    <ClInclude Include="syscalls.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <MASM Include="syscalls.asm" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
   </ImportGroup>
 </Project>
